alterações contato emergencia